fixed icon wrapping, improved front page card, added cards to research links

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -691,10 +691,24 @@ input, select, textarea {
 					border-bottom-width: 0.5em;
 				}
 
-		@media screen and (max-width: 736px) {
+		@media screen and (max-width: 768px) {
+
+			#nav a {
+				font-size: 1.8em;
+				margin: 0 0.3em 0 0.3em;
+			}
 
 			#nav a span {
 				display: none;
+			}
+
+		}
+
+		@media screen and (max-width: 480px) {
+
+			#nav a {
+				font-size: 1.6em;
+				margin: 0 0.25em 0 0.25em;
 			}
 
 		}
@@ -705,7 +719,7 @@ input, select, textarea {
 		width: 60em;
 		margin: 0 auto;
 		min-height: 100vh;
-		max-width: 100%;
+		max-width: 85%;
 		padding: 4em 0;
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -733,41 +747,46 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-		@media screen and (max-width: 1280px) {
+		@media screen and (max-width: 1200px) {
 
 			#wrapper {
 				padding: 3em 0;
-				max-width: calc(100% - 6em);
 			}
 
 		}
 
-		@media screen and (max-width: 980px) {
-
-			#wrapper {
-				padding: 2em 0;
-				max-width: calc(100% - 8em);
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
+		@media screen and (max-width: 768px) {
 
 			#wrapper {
 				padding: 1em 0;
-				max-width: calc(100% - 2em);
+				width: 85%;
+				max-width: none;
 			}
 
 		}
 
-		@media screen and (max-width: 360px) {
+		@media screen and (max-width: 480px) {
 
 			#wrapper {
 				padding: 1em 0;
-				max-width: 100%;
+				width: 90%;
+				max-width: none;
 			}
 
 		}
+
+/* Front page specific fixed widths */
+@media screen and (max-width: 768px) {
+	body.panel-home #wrapper {
+		width: 340px;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	body.panel-home #wrapper {
+		width: 320px;
+	}
+}
 
 /* Main */
 
@@ -800,10 +819,10 @@ input, select, textarea {
 				opacity: 0;
 			}
 
-			@media screen and (max-width: 736px) {
+			@media screen and (max-width: 768px) {
 
 				#main > .panel {
-					padding: 2em 1.5em 1.5em 1.5em;
+					padding: 1.5em 1em 1em 1em;
 				}
 
 			}
@@ -923,6 +942,7 @@ input, select, textarea {
 					#main > .panel.intro header h1 {
 						line-height: 1.5em;
 						margin-bottom: 0;
+						white-space: nowrap;
 					}
 
 					#main > .panel.intro header pp {
@@ -930,14 +950,25 @@ input, select, textarea {
 						margin: 0 0 0.5rem 0;
 						text-transform: uppercase;
 						letter-spacing: 0.2rem;
+						white-space: nowrap;
 					}
 
 					#main > .panel.intro header p {
 						font-size: 1.25em;
 						margin: 2rem 0 0 0;
+						white-space: nowrap;
 					}
 
-				@media screen and (max-width: 736px) {
+				@media screen and (max-width: 820px) {
+
+					#main > .panel.intro .pic {
+						width: 30em;
+						flex-shrink: 1;
+					}
+
+				}
+
+				@media screen and (max-width: 768px) {
 
 					#main > .panel.intro {
 						-moz-flex-direction: column;
@@ -948,26 +979,94 @@ input, select, textarea {
 					}
 
 					#main > .panel.intro .pic {
-						height: 20em;
+						height: 18em;
 						width: 100%;
 					}
 
 					#main > .panel.intro header {
-						padding: 2.75em 2em 2.5em 2em;
+						padding: 1em 1em 1.5em 1em;
 						text-align: center;
 					}
 
 						#main > .panel.intro header p {
 							font-size: 1em;
 							margin: 1em 0 0 0;
+							white-space: nowrap;
 						}
 
 						#main > .panel.intro header pp {
 							font-size: 0.8em;
 							margin: 0 0 0 0;
+							white-space: nowrap;
 						}
 
 				}
+
+/* Research Container Styles */
+
+	.research-container {
+		display: -moz-flex;
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		-moz-flex-direction: row;
+		-webkit-flex-direction: row;
+		-ms-flex-direction: row;
+		flex-direction: row;
+		-moz-align-items: flex-start;
+		-webkit-align-items: flex-start;
+		-ms-align-items: flex-start;
+		align-items: flex-start;
+		margin: 2em 0;
+		gap: 2em;
+	}
+
+		.research-container .research-text {
+			-moz-flex-grow: 1;
+			-webkit-flex-grow: 1;
+			-ms-flex-grow: 1;
+			flex-grow: 1;
+			-moz-flex-shrink: 1;
+			-webkit-flex-shrink: 1;
+			-ms-flex-shrink: 1;
+			flex-shrink: 1;
+			flex-basis: 40%;
+		}
+
+		.research-container .research-image {
+			-moz-flex-grow: 0;
+			-webkit-flex-grow: 0;
+			-ms-flex-grow: 0;
+			flex-grow: 0;
+			-moz-flex-shrink: 0;
+			-webkit-flex-shrink: 0;
+			-ms-flex-shrink: 0;
+			flex-shrink: 0;
+			flex-basis: 60%;
+			max-width: 400px;
+		}
+
+			.research-container .research-image .gallery {
+				margin: 0;
+			}
+
+		@media screen and (max-width: 768px) {
+
+			.research-container {
+				-moz-flex-direction: column;
+				-webkit-flex-direction: column;
+				-ms-flex-direction: column;
+				flex-direction: column;
+				gap: 1em;
+			}
+
+			.research-container .research-text,
+			.research-container .research-image {
+				flex-basis: auto;
+				max-width: none;
+			}
+
+		}
 
 
 
